--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,12 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
         </nav>
         <div id="content">
-            <div class="home">
-                <h1>MOM's Kitchen</h1>
-                <div class="momImage"></div>
-                <p class="intro">Welcome to "Mom's Kitchen", where love and culinary expertise create an unforgettable dining experience. Our menu, though not extensive, is crafted with care and dedication. Each bite is a tribute to a mother's love, aiming to evoke the warmth of home-cooked meals. At "Mom's Kitchen", we serve not just food, but a slice of home and a dash of nostalgia. Welcome to a dining experience that's truly out of this world.</p>
+            
         </div>
     </header>
 </body>
